- "Update" to 2.5.12. This is the supported stable branch upstream - Bump PORTEPOCH - Trim Makefile header - Add CONFLICTS_INSTALL [1] - Make rc scripts more rclint compliant - Update WWW line in pkg-descr
PR:		ports/175063
Submitted by:	Jason Bacon <jwbacon@tds.net> (maintainer)
Approved by:	danfe (maintainer of games/qstat, via email) [1]
Approved by:	Kai Wang <kaiwang27@gmail.com> (maintainer of chinese/qterm) [1]
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315876 35697150-7ecd-e111-bb59-0022644237b5

--- a/chinese/qterm/Makefile
+++ b/chinese/qterm/Makefile
@@ -19,6 +19,8 @@ USE_XORG=	x11 ice
 MAKE_JOBS_SAFE=	yes
 INSTALLS_ICONS=	yes
 
+CONFLICTS_INSTALL=	torque-[0-9]*
+
 OPTIONS_DEFINE=	DBUS OPENSSL PHONON QTSCRIPT KDE
 OPTIONS_DEFAULT=	DBUS OPENSSL PHONON QTSCRIPT
 
