--- a/sysutils/torque/files/pbs_server.in
+++ b/sysutils/torque/files/pbs_server.in
@@ -3,7 +3,9 @@
 # $FreeBSD$
 #
 # PROVIDE: pbs_server
-# REQUIRE: 
+# REQUIRE: DAEMON
+# BEFORE: LOGIN
+# KEYWORD: shutdown
 #
 # Add the following lines to /etc/rc.conf.local or /etc/rc.conf
 # to enable this service:
@@ -14,7 +16,7 @@
 
 . /etc/rc.subr
 
-name="pbs_server"
+name=pbs_server
 rcvar=pbs_server_enable
 
 pidfile=/var/spool/torque/server_priv/server.lock
@@ -22,6 +24,6 @@ command=%%PREFIX%%/sbin/${name}
 
 load_rc_config $name
 
-: ${pbs_server_enable="NO"}
+: ${pbs_server_enable:="NO"}
 
 run_rc_command "$1"
