--- a/sysutils/torque/files/pbs_sched.in
+++ b/sysutils/torque/files/pbs_sched.in
@@ -4,6 +4,8 @@
 #
 # PROVIDE: pbs_sched
 # REQUIRE: pbs_server
+# BEFORE: LOGIN
+# KEYWORD: shutdown
 #
 # Add the following lines to /etc/rc.conf.local or /etc/rc.conf
 # to enable this service:
@@ -14,7 +16,7 @@
 
 . /etc/rc.subr
 
-name="pbs_sched"
+name=pbs_sched
 rcvar=pbs_sched_enable
 
 pidfile=/var/spool/torque/sched_priv/sched.lock
@@ -22,6 +24,6 @@ command=%%PREFIX%%/sbin/${name}
 
 load_rc_config $name
 
-: ${pbs_sched_enable="NO"}
+: ${pbs_sched_enable:="NO"}
 
 run_rc_command "$1"
