- Update to 1.1.20rev1 - Remove BROKEN
PR:		ports/177302
Submitted by:	Hardy Schumacher <hardy.schumacher@gmx.de> (maintainer)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315880 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/z80ex/Makefile
+++ b/devel/z80ex/Makefile
@@ -2,14 +2,13 @@
 # $FreeBSD$
 
 PORTNAME=	z80ex
-PORTVERSION=	1.1.20
+PORTVERSION=	1.1.20.1
 CATEGORIES=	devel
-MASTER_SITES=	SF
+MASTER_SITES=	SF/${PORTNAME:L}/${PORTNAME:L}/1.1.20rev1
+DISTNAME=	${PORTNAME}-1.1.20rev1
 
 MAINTAINER=	hardy.schumacher@gmx.de
 COMMENT=	ZiLOG Z80 CPU emulator library
-
-BROKEN=		checksum mismatch
 
 USE_GMAKE=	yes
 USE_LDCONFIG=	yes
