- Update to 0.4.0 - Trim Makefile headers
PR:		ports/177560
Submitted by:	Richard Kojedzinszky <krichy@pi.nmdps.net> (maintainer from another address)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315881 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/libjson++/Makefile
+++ b/devel/libjson++/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	libjson++
-# Date created:				15 May 2012
-# Whom:					krichy
-#
+# Created by: Kojedzinszky Richard <krichy@tvnetwork.hu>
 # $FreeBSD$
-#
 
 PORTNAME=	libjson++
-PORTVERSION=	0.3.4
+PORTVERSION=	0.4.0
 CATEGORIES=	devel
 MASTER_SITES=	ftp://ftp.cflinux.hu/pub/
 
