Fix fetch by update from 1.1.1 to 1.2.0.
Feature safe: yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315887 35697150-7ecd-e111-bb59-0022644237b5

--- a/benchmarks/wrk/Makefile
+++ b/benchmarks/wrk/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	wrk
-PORTVERSION=	1.1.1
+PORTVERSION=	1.2.0
 CATEGORIES=	benchmarks www
 MASTER_SITES=	http://github.com/wg/${PORTNAME}/tarball/master/
 DISTNAME=	${PORTNAME}-${PORTVERSION}-${GITVERSION}
@@ -13,7 +13,7 @@ COMMENT=	The modern HTTP benchmarking tool
 LICENSE=	AL2
 
 FETCH_ARGS=	-pRr
-GITVERSION=	0-gae7a043
+GITVERSION=	0-g6c4064c
 WRKSRC=		${WRKDIR}/wg-${PORTNAME}-${GITVERSION:S/^0-g//}
 USE_GMAKE=	yes
 CFLAGS+=	-std=c99 -D_DECLARE_C99_LDBL_MATH
