Update to version 2.2.3.
PR:		ports/177849
Submitted by:	Fernando <fernando.apesteguia@gmail.com> (maintainer)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315897 35697150-7ecd-e111-bb59-0022644237b5

--- a/cad/openvsp/Makefile
+++ b/cad/openvsp/Makefile
@@ -2,15 +2,13 @@
 # $FreeBSD$
 
 PORTNAME=	openvsp
-PORTVERSION=	2.2.2
+PORTVERSION=	2.2.3
 CATEGORIES=	cad
-MASTER_SITES=	https://github.com/OpenVSP/OpenVSP/archive/
 
 MAINTAINER=	fernando.apesteguia@gmail.com
 COMMENT=	Create a 3D model of an aircraft defined by engineering parameters
 
 BUILD_DEPENDS=	${LOCALBASE}/lib/libopenNURBS.a:${PORTSDIR}/graphics/opennurbs
-
 LIB_DEPENDS=	pthread-stubs:${PORTSDIR}/devel/libpthread-stubs \
 		jpeg:${PORTSDIR}/graphics/jpeg \
 		drm:${PORTSDIR}/graphics/libdrm \
@@ -20,9 +18,15 @@ LIB_DEPENDS=	pthread-stubs:${PORTSDIR}/devel/libpthread-stubs \
 		fontconfig:${PORTSDIR}/x11-fonts/fontconfig \
 		fltk:${PORTSDIR}/x11-toolkits/fltk \
 		xcb:${PORTSDIR}/x11/libxcb
-WRKSRC=		${WRKDIR}/OpenVSP-OpenVSP_${PORTVERSION}/src
 
-USES=		cmake
+USE_GITHUB=	yes
+GH_PROJECT=	OpenVSP
+GH_ACCOUNT=	${GH_PROJECT}
+GH_TAGNAME=	${GH_PROJECT}_${PORTVERSION}
+GH_COMMIT=	fb52aa2
+
+CMAKE_SOURCE_PATH=	${WRKSRC}/src
+USES=		cmake:outsource
 USE_DOS2UNIX=	yes
 USE_ICONV=	yes
 USE_XORG=	ice sm x11 xau xdamage xdmcp xext xfixes xft \
@@ -31,7 +35,7 @@ USE_GL=		glu
 USE_GNOME=	libxml2
 
 PORTEXAMPLES=	*
-INSTALL_PORTEXAMPLES=	@(cd ${WRKSRC}/../examples/ && ${COPYTREE_SHARE} \* ${EXAMPLESDIR})
+INSTALL_PORTEXAMPLES=	@(cd ${WRKSRC}/examples && ${COPYTREE_SHARE} \* ${EXAMPLESDIR})
 
 PLIST_FILES=	bin/vsp
 
@@ -39,14 +43,8 @@ CFLAGS+=	-I${LOCALBASE}/include/openNURBS
 
 .include <bsd.port.options.mk>
 
-do-fetch:
-	if [ ! -f ${DISTDIR}/${DISTNAME}${EXTRACT_SUFX} ]; then \
-		${FETCH_BINARY} -o ${DISTDIR}/${DISTNAME}${EXTRACT_SUFX} \
-			${MASTER_SITES}OpenVSP_${PORTVERSION}${EXTRACT_SUFX}; \
-	fi
-
 do-install:
-	@${INSTALL_PROGRAM} ${WRKSRC}/vsp/vsp ${PREFIX}/bin
+	@${INSTALL_PROGRAM} ${BUILD_WRKSRC}/vsp/vsp ${PREFIX}/bin
 .if ${PORT_OPTIONS:MEXAMPLES}
 	@${MKDIR} ${EXAMPLESDIR}
 	@${INSTALL_PORTEXAMPLES}
