Add some symlinks to linux_base-f10 for executables that exist in /usr/bin on Linux but /bin on FreeBSD. This guarantees that Linux shell scripts run the Linux executables and not the FreeBSD ones.
No objection from:	-emulation
PR:		ports/176819
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315899 35697150-7ecd-e111-bb59-0022644237b5

--- a/emulators/linux_base-f10/Makefile
+++ b/emulators/linux_base-f10/Makefile
@@ -3,7 +3,7 @@
 
 PORTNAME=		f10
 PORTVERSION=		10
-PORTREVISION=		5
+PORTREVISION=		6
 CATEGORIES=		emulators linux
 MASTER_SITES=		CRITICAL/rpm/${LINUX_RPM_ARCH}/fedora/${PORTVERSION}
 PKGNAMEPREFIX=		linux_base-
@@ -210,6 +210,10 @@ do-install:
 		| ${CPIO} -pm -R root:wheel ${PREFIX}
 
 	@${LN} -sf /var/tmp ${PREFIX}/usr/tmp
+	@${LN} -sf ../usr/bin/[ ${PREFIX}/bin/[
+	@${LN} -sf ../usr/bin/expr ${PREFIX}/bin/expr
+	@${LN} -sf ../usr/bin/test ${PREFIX}/bin/test
+	@${LN} -sf ../usr/bin/uuidgen ${PREFIX}/bin/uuidgen
 	@${CHOWN} root:wheel ${PREFIX}/var/lock ${PREFIX}/var/spool/mail
 	@${CHMOD} 755 ${PREFIX}/var/lock ${PREFIX}/var/spool/mail
 #
