- Update to 0.30 - Trim Makefile header
PR:		ports/177877
Submitted by:	Danny Warren <danny@dannywarren.com>
Approved by:	Alexander <alexander.4mail@gmail.com> (maintainer)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315900 35697150-7ecd-e111-bb59-0022644237b5

--- a/net-mgmt/cnagios/Makefile
+++ b/net-mgmt/cnagios/Makefile
@@ -1,11 +1,8 @@
-# New ports collection makefile for:	cnagios
-# Date created:				23 May 2012
-# Whom:					Alexander Y. Grigoryev <alexander.4mail@gmail.com>
-#
+# Created by: Alexander Y. Grigoryev <alexander.4mail@gmail.com>
 # $FreeBSD$
 
 PORTNAME=	cnagios
-PORTVERSION=	0.29
+PORTVERSION=	0.30
 CATEGORIES=	net-mgmt
 MASTER_SITES=	ftp://noc.hep.wisc.edu/src/cnagios/ \
 		ftp://noc.hep.wisc.edu/src/cnagios/old-versions/
