Use byacc on current instead of bison. Convert to new options framework Remove indefinite article from COMMENT Add license
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315910 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/datadraw/Makefile
+++ b/devel/datadraw/Makefile
@@ -8,14 +8,24 @@ MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}${PORTVERSION}
 DISTNAME=	${PORTNAME}${PORTVERSION}
 
 MAINTAINER=	ports@FreeBSD.org
-COMMENT=	A feature rich persistent database generator
+COMMENT=	Feature rich persistent database generator
 
-USES=		bison
+LICENSE=	GPLv2
+
 HAS_CONFIGURE=	yes
 USE_GMAKE=	yes
 ALL_TARGET=	# empty
 
-.if !defined(NOPORTDOCS)
+.include <bsd.port.options.mk>
+
+.if ${OSVERSION} < 1000013
+USES+=		bison
+.else
+post-patch:
+	${REINPLACE_CMD} -e "s/bison/byacc/g" ${WRKSRC}/configure
+.endif
+
+.if ${PORT_OPTIONS:MDOCS}
 PORTDOCS=	*
 
 post-install:
