- add new port: databases/pg_activity
Top like utility for PostgreSQL activity monitoring

WWW: https://github.com/julmon/pg_activity

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315915 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -549,6 +549,7 @@
     SUBDIR += percona55-server
     SUBDIR += percona56-client
     SUBDIR += percona56-server
+    SUBDIR += pg_activity
     SUBDIR += pg_filedump
     SUBDIR += pg_reorg
     SUBDIR += pg_rman
