- add new port: science/voro++
Voro++ is a software library for carrying out three-dimensional computations
of the Voronoi tessellation. A distinguishing feature of the Voro++ library
is that it carries out cell-based calculations, computing the Voronoi cell
for each particle individually. It is particularly well-suited for
applications that rely on cell-based statistics, where features of Voronoi
cells (eg. volume, centroid, number of faces) can be used to analyze a
system of particles.

WWW: http://math.lbl.gov/voro++/

PR:		177678
Submitted by:	jwbacon@tds.net

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315916 35697150-7ecd-e111-bb59-0022644237b5

--- a/science/Makefile
+++ b/science/Makefile
@@ -193,6 +193,7 @@
     SUBDIR += v_sim
     SUBDIR += veusz
     SUBDIR += vmd
+    SUBDIR += voro++
     SUBDIR += x11iraf
     SUBDIR += xmakemol
     SUBDIR += xmds
