- support handling of NLS while upstream works out issue - bump portrevision
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315918 35697150-7ecd-e111-bb59-0022644237b5

--- a/deskutils/xpad-current/Makefile
+++ b/deskutils/xpad-current/Makefile
@@ -3,7 +3,7 @@
 
 PORTNAME=	xpad
 PORTVERSION=	4.1
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	deskutils
 MASTER_SITES=	http://launchpad.net/${PORTNAME}/trunk/${PORTVERSION}/+download/
 PKGNAMESUFFIX=	-current
@@ -12,6 +12,8 @@ MAINTAINER=	jgh@FreeBSD.org
 COMMENT=	Virtual note-pad system for your X11 desktop
 
 LICENSE=	GPLv3
+
+OPTIONS_DEFINE=	NLS
 
 CONFLICTS_INSTALL=	xpad-[0-9]*
 FETCH_ARGS=	-p
@@ -25,12 +27,24 @@ LDFLAGS+=	-L${LOCALBASE}/lib
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
 
+.include <bsd.port.options.mk>
+
 #code currently doesn't properly handle --disable-nls (in next upstream milestone)
+.if ${PORT_OPTIONS:MNLS}
 USE_GETTEXT=	yes
+PLIST_SUB+=	NLS=""
+.else
+CONFIGURE_ARGS+=	--disable-nls
+PLIST_SUB+=	NLS="@comment "
+.endif
 
-MAN1=		xpad.1
+MAN1+=		xpad.1
 
-post-patch:
+post-patch-script:
+.if ! ${PORT_OPTIONS:MNLS}
+	@${REINPLACE_CMD} -e 's|SUBDIRS = autopackage doc src images po|SUBDIRS = autopackage doc src images|' \
+		${WRKSRC}/Makefile.in
+.endif
 	@${REINPLACE_CMD} -e 's|glib/glist.h|glib.h|g' \
 		${WRKSRC}/src/xpad-undo.c
 
