--- a/deskutils/xpad/Makefile
+++ b/deskutils/xpad/Makefile
@@ -1,9 +1,9 @@
-# Created by:	Guillaume Paquet <amyfoub@gmail.com>
+# Created by: Guillaume Paquet <amyfoub@gmail.com>
 # $FreeBSD$
 
 PORTNAME=	xpad
 PORTVERSION=	3.1
-PORTREVISION=	7
+PORTREVISION=	8
 CATEGORIES=	deskutils
 MASTER_SITES=	http://launchpad.net/xpad/stable/${PORTVERSION}/+download/
 
@@ -11,6 +11,8 @@ MAINTAINER=	jgh@FreeBSD.org
 COMMENT=	Virtual note-pad system for your X11 desktop
 
 LICENSE=	GPLv3
+
+OPTIONS_DEFINE=	NLS
 
 CONFLICTS_INSTALL=	xpad-current-[0-9]*
 
@@ -22,11 +24,27 @@ USE_GNOME=	gtk20 gnomehier intltool
 USE_PKGCONFIG=	build
 INSTALLS_ICONS=	yes
 GNU_CONFIGURE=	yes
-CPPFLAGS+=	${CXXFLAGS} -I${LOCALBASE}/include
-LDFLAGS+=	-L${LOCALBASE}/lib
-
-USE_GETTEXT=	yes
 
 MAN1=		xpad.1
+
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MNLS}
+USE_GETTEXT=	yes
+PLIST_SUB+=	NLS=""
+CPPFLAGS+=	${CXXFLAGS} -I${LOCALBASE}/include
+LDFLAGS+=	-L${LOCALBASE}/lib
+.else
+CONFIGURE_ARGS+=	--disable-nls
+PLIST_SUB+=	NLS="@comment "
+.endif
+
+MAN1+=		xpad.1
+
+post-patch-script:
+.if ! ${PORT_OPTIONS:MNLS}
+	@${REINPLACE_CMD} -e 's|SUBDIRS = autopackage doc src images po|SUBDIRS = autopackage doc src images|' \
+		${WRKSRC}/Makefile.in
+.endif
 
 .include <bsd.port.mk>
