- Remove compatibiliy for FreeBSD <4.x   * /var/empty has been in hier(7) since 4.x   * User sshd has been in base since 4.x   * Simplify a patch for realhostname_sa(3) usage - Remove SUID_SSH - It was removed from ssh in 2002 - Fix 'make test' - Add some hints into the patches on where they came from - Mirror all patches - Move LPK patch out of files/ - Remove the need for 2 patches   * Removal of 'host-key check-config' in install phase   * Adding -lutil - Add SCTP support [1] - Remove FILECONTROL as it has not been supported since the 5.8   update - Replace tab with space pkg-descr - Remove default WRKSRC - Add 'configtest' command to rc script - Mark X509 broken with other patches due to PATCH_DIST_STRIP=-p1
PR:		ports/174570 [1]
Submitted by:	oleg <proler@gmail.com> [1]
Obtained from:	https://bugzilla.mindrot.org/show_bug.cgi?id=2016 (upstream) [1]
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315920 35697150-7ecd-e111-bb59-0022644237b5

--- a/security/openssh-portable/files/openssh.in
+++ b/security/openssh-portable/files/openssh.in
@@ -25,9 +25,11 @@ load_rc_config ${name}
 : ${openssh_skipportscheck="NO"}
 
 command=%%PREFIX%%/sbin/sshd
-extra_commands="reload keygen"
+extra_commands="configtest reload keygen"
 start_precmd="${name}_checks"
+reload_precmd="${name}_configtest"
 restart_precmd="${name}_checks"
+configtest_cmd="${name}_configtest"
 keygen_cmd="${name}_keygen"
 pidfile=${openssh_pidfile:="/var/run/sshd.pid"}
 
@@ -137,6 +139,12 @@ openssh_check_same_ports(){
     fi
 }
 
+openssh_configtest()
+{
+	echo "Performing sanity check on ${name} configuration."
+	eval ${command} ${openssh_flags} -t
+}
+
 openssh_checks()
 {
 	if checkyesno sshd_enable ; then
@@ -146,7 +154,7 @@ openssh_checks()
 	fi
 
 	run_rc_command keygen
-	eval "${command} -t"
+	openssh_configtest
 }
 
 run_rc_command "$1"
