--- a/www/owncloud/Makefile
+++ b/www/owncloud/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	owncloud
-PORTVERSION=	5.0.0
+PORTVERSION=	5.0.4
 CATEGORIES=	www
 MASTER_SITES=	http://download.owncloud.org/community/
 
@@ -14,9 +14,9 @@ BUILD_DEPENDS=	mp3info:${PORTSDIR}/audio/mp3info
 RUN_DEPENDS:=	${BUILD_DEPENDS}
 
 USE_BZIP2=	yes
-USE_PHP=	ctype curl dom fileinfo gd hash iconv json mbstring mysql \
-		pdo pdo_mysql pdo_sqlite session simplexml sqlite3 xml zip \
-		zlib
+USE_PHP=	ctype curl dom fileinfo filter gd hash iconv json mbstring \
+		mysql pdo pdo_mysql pdo_sqlite session simplexml sqlite3 xml \
+		zip zlib
 WANT_PHP_WEB=	yes
 DEFAULT_PHP_VER=5
 
