Update to spiped 1.3.1.
This new version brings automatic DNS re-resolution (useful when connecting
from wifi networks which give fake DNS until you log in), fixes a bug in the
handling of reset TCP connections, and replaces README files with man pages.

As the spiped build sets _POSIX_C_SOURCE for maximal portability, yet looks
for and uses MSG_NOSIGNAL if it is available (as a performance optimization
relative to the POSIX-compliant approach of blocking SIGPIPE), we force the
__BSD_VISIBLE macro to be defined.

Feature safe: yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315924 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/spiped/Makefile
+++ b/sysutils/spiped/Makefile
@@ -1,13 +1,7 @@
-# New ports collection makefile for:		spiped secure pipe daemon
-# Date created:					2011-08-18
-# Whom:						Colin Percival
-#
 # $FreeBSD$
-#
 
 PORTNAME=	spiped
-PORTVERSION=	1.2.1
-PORTREVISION=	1
+PORTVERSION=	1.3.1
 CATEGORIES=	sysutils security
 MASTER_SITES=	http://www.tarsnap.com/spiped/
 EXTRACT_SUFX=	.tgz
@@ -18,21 +12,22 @@ COMMENT=	Daemon for creating secure symmetric pipes
 LICENSE=	BSD
 LICENSE_FILE=	${WRKSRC}/COPYRIGHT
 
-DOCFILES=	BUILDING CHANGELOG COPYRIGHT README STYLE
-READMES=	spiped spipe
+# Ask to have man pages installed
+MAKE_ARGS=	MAN1DIR=${MANPREFIX}/man/man1
+MAN1=		spiped.1 spipe.1
 
+# Force __BSD_VISIBLE on since it works and improves performance
+MAKE_ARGS+=	CFLAGS="-O2 -D__BSD_VISIBLE"
+
+PORTDOCS=	BUILDING CHANGELOG COPYRIGHT README STYLE
 PLIST_FILES=	bin/spiped bin/spipe
-PORTDOCS=	${DOCFILES} ${READMES:S/^/README-/}
 
 USE_RC_SUBR=	spiped
 
 post-install:
-.if !defined(NOPORTDOCS)
+.if defined(PORT_OPTIONS:MDOCS)
 	${MKDIR} ${DOCSDIR}
 	(cd ${WRKSRC} && ${INSTALL_MAN} ${DOCFILES} ${DOCSDIR})
-.for README in ${READMES}
-	${INSTALL_MAN} ${WRKSRC}/${README}/README ${DOCSDIR}/README-${README}
-.endfor
 .endif
 
 .include <bsd.port.mk>
