--- a/security/racoon2/Makefile
+++ b/security/racoon2/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	racoon2
 PORTVERSION=	20100526a
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	security net ipv6
 MASTER_SITES=	ftp://ftp.racoon2.wide.ad.jp/pub/racoon2/
 EXTRACT_SUFX=	.tgz
@@ -21,6 +21,7 @@ USE_OPENSSL=	YES
 USE_AUTOTOOLS=	autoconf
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS+=	--sysconfdir=${PREFIX}/etc/racoon2
+CONFIGURE_ENV=	YACC=/usr/bin/yacc
 
 OPTIONS=	KINK "enable KINK support" off
 
