- pass maintainership to zope@ - trim Makefile header, while here
Approved by:	clsung (maintainer, via linkedin)
Feature safe:   yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315934 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/py-zope.configuration/Makefile
+++ b/devel/py-zope.configuration/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	py-zope.configuration
-# Date created:				2011-03-21
-# Whom:					Cheng-Lung Sung <clsung@FreeBSD.org>
-#
+# Created by: Cheng-Lung Sung <clsung@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	zope.configuration
 PORTVERSION=	3.8.0
@@ -12,7 +8,7 @@ MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DIST_SUBDIR=	zope
 
-MAINTAINER=	clsung@FreeBSD.org
+MAINTAINER=	zope@FreeBSD.org
 COMMENT=	Zope Configuration Markup Language (ZCML)
 
 LICENSE=	ZPL21
