--- a/textproc/py-zope.i18nmessageid/Makefile
+++ b/textproc/py-zope.i18nmessageid/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	py-zope.i18nmessageid
-# Date created:				2011-03-21
-# Whom:					Cheng-Lung Sung <clsung@FreeBSD.org>
-#
+# Created by: Cheng-Lung Sung <clsung@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	zope.i18nmessageid
 PORTVERSION=	3.6.1
@@ -11,7 +7,7 @@ CATEGORIES=	textproc www python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	clsung@FreeBSD.org
+MAINTAINER=	zope@FreeBSD.org
 COMMENT=	Message Identifiers for internationalization
 
 USE_PYTHON=	yes
