--- a/devel/py-six/Makefile
+++ b/devel/py-six/Makefile
@@ -7,7 +7,7 @@ CATEGORIES=	devel python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	clsung@FreeBSD.org
+MAINTAINER=	zope@FreeBSD.org
 COMMENT=	Python 2 and 3 compatibility utilities
 
 LICENSE=	MIT
