--- a/devel/py-zope.deprecation/Makefile
+++ b/devel/py-zope.deprecation/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	py-zope.deprecation
-# Date created:				2011-03-21
-# Whom:					Cheng-Lung Sung <clsung@FreeBSD.org>
-#
+# Created by: Cheng-Lung Sung <clsung@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	zope.deprecation
 PORTVERSION=	3.5.0
@@ -11,11 +7,10 @@ CATEGORIES=	devel python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	clsung@FreeBSD.org
+MAINTAINER=	zope@FreeBSD.org
 COMMENT=	Zope 3 Deprecation Infrastructure
 
 DIST_SUBDIR=	zope
-# Python3 ready
 USE_PYTHON=	yes
 USE_PYDISTUTILS=	easy_install
 
