- Update to 20120819 - Use new header format in Makefile - Use NO_WRKSUBDIR instead of redefining WRKSRC manually
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315937 35697150-7ecd-e111-bb59-0022644237b5

--- a/games/openjazz/Makefile
+++ b/games/openjazz/Makefile
@@ -1,24 +1,19 @@
-# New ports collection makefile for: openjazz
-# Date created:					01 Apr 2008
-# Whom:							Ganael Laplanche <ganael.laplanche@martymac.org>
-#
+# Created by: Ganael Laplanche <ganael.laplanche@martymac.org>
 # $FreeBSD$
-#
 
 PORTNAME=	openjazz
-PORTVERSION=	20120730
+PORTVERSION=	20120819
 CATEGORIES=	games
 MASTER_SITES=	http://alister.eu/jazz/oj/ \
 		LOCAL/martymac
-DISTNAME=	OpenJazz-src-300712
+DISTNAME=	OpenJazz-src-190812
 
 MAINTAINER=	martymac@FreeBSD.org
 COMMENT=	Free re-implementation of the Jazz Jackrabbit(tm) game engine
 
 LICENSE=	GPLv2
 
-WRKSRC=	${WRKDIR}
-
+NO_WRKSUBDIR=	yes
 USE_ZIP=	yes
 USE_GMAKE=	yes
 ALL_TARGET=	OpenJazz
