- Update to 1.08.r20130224 - Use new header format in Makefile
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315938 35697150-7ecd-e111-bb59-0022644237b5

--- a/games/triplane/Makefile
+++ b/games/triplane/Makefile
@@ -1,13 +1,8 @@
-# New ports collection makefile for: triplane
-# Date created:	01 Jan 2011
-# Whom:		Ganael Laplanche <ganael.laplanche@martymac.org>
-#
+# Created by: Ganael Laplanche <ganael.laplanche@martymac.org>
 # $FreeBSD$
-#
 
 PORTNAME=	triplane
-PORTVERSION=	1.04.r20110114
-PORTREVISION=	1
+PORTVERSION=	1.08.r20130224
 CATEGORIES=	games
 MASTER_SITES=	http://contribs.martymac.org/FreeBSD-ports/distfiles/ \
 		SF/${PORTNAME}
@@ -26,5 +21,7 @@ CFLAGS+=	-DTRIPLANE_DATA=\\\"${DATADIR}\\\"
 MAKE_ENV=	DATADIR="${DATADIR}"
 
 ALL_TARGET=	depend all
+
+MAN6=	triplane.6
 
 .include <bsd.port.mk>
