--- a/www/py-selenium/Makefile
+++ b/www/py-selenium/Makefile
@@ -1,8 +1,8 @@
-# Created by: Douglas Thrift
+# Created by: Douglas Thrift <douglas@douglasthrift.net>
 # $FreeBSD$
 
 PORTNAME=	selenium
-PORTVERSION=	2.31.0
+PORTVERSION=	2.32.0
 CATEGORIES=	www python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
