- Add DOCS to OPTIONS_DEFINE
Reported by:	tijl
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315944 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/zorba/Makefile
+++ b/textproc/zorba/Makefile
@@ -23,7 +23,7 @@ RUN_DEPENDS=	fop:${PORTSDIR}/textproc/fop
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
-OPTIONS_DEFINE=	PHP PYTHON RUBY JAVA
+OPTIONS_DEFINE=	PHP PYTHON RUBY JAVA DOCS
 
 # Both install include/xqc.h
 CONFLICTS=	xqilla-[0-9]*
