- Update to 5.1   Release notes: http://sf.net/projects/codelite/files/Releases/codelite-5.1/ - Remove a few FreeBSD-specific patches which were applied upstream
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315946 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/codelite/Makefile
+++ b/editors/codelite/Makefile
@@ -2,9 +2,9 @@
 # $FreeBSD$
 
 PORTNAME=	codelite
-DISTVERSION=	5.0.${SVN_REVISION}
+DISTVERSION=	5.1
 CATEGORIES=	editors devel
-MASTER_SITES=	SF/${PORTNAME}/Releases/${PORTNAME}-${PORTVERSION:R}/
+MASTER_SITES=	SF/${PORTNAME}/Releases/${PORTNAME}-${PORTVERSION}/
 DISTNAME=	${PORTNAME}-${PORTVERSION}-gtk.src
 
 MAINTAINER=	gahr@FreeBSD.org
@@ -15,7 +15,7 @@ LICENSE=	GPLv2
 LIB_DEPENDS=	curl:${PORTSDIR}/ftp/curl
 RUN_DEPENDS=	xterm:${PORTSDIR}/x11/xterm
 
-OPTIONS_DEFINE=	CSCOPE CLANG MYSQL PGSQL
+OPTIONS_DEFINE=	CSCOPE CLANG
 
 CSCOPE_DESC=	CScope integration
 CLANG_DESC=	Clang code-completion
@@ -23,12 +23,12 @@ CLANG_DESC=	Clang code-completion
 USE_WX=		2.9
 WX_UNICODE=	yes
 USE_DOS2UNIX=	*.cpp
-USE_GMAKE=	yes
-HAS_CONFIGURE=	yes
-CPPFLAGS+=	-g -O0
-CONFIGURE_ARGS+=--enable-debug \
-		--prefix=${PREFIX}
-CONFIGURE_ENV+=	WXCONFIG=${WX_CONFIG}
+USE_GETTEXT=	yes
+USE_LDCONFIG=	lib/codelite
+USE_CMAKE=	yes
+CMAKE_OUTSOURCE=yes
+CMAKE_ARGS+=	-DIS_FREEBSD=1 \
+		-DPREFIX=${PREFIX}
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
@@ -41,42 +41,23 @@ RUN_DEPENDS+=	cscope:${PORTSDIR}/devel/cscope
 .endif
 
 .if ${PORT_OPTIONS:MCLANG}
-.if ${OSVERSION} < 1000026
-BUILD_DEPENDS+=	${LOCALBASE}/lib/libclang.so:${PORTSDIR}/lang/clang
-RUN_DEPENDS+=	${LOCALBASE}/lib/libclang.so:${PORTSDIR}/lang/clang
-.endif
+BUILD_DEPENDS+=	${LOCALBASE}/lib/libclang.so:${PORTSDIR}/lang/clang-devel
+RUN_DEPENDS+=	${LOCALBASE}/lib/libclang.so:${PORTSDIR}/lang/clang-devel
 PLIST_SUB+=	CLANG=""
+CMAKE_ARGS+=	-DENABLE_CLANG=1
 .else
-CONFIGURE_ARGS+=--without-clang
-ENABLE_CLANG=	\#
 PLIST_SUB+=	CLANG="@comment "
-.endif
-
-.if ${PORT_OPTIONS:MMYSQL}
-CONFIGURE_ARGS+=--enable-mysql
-USE_MYSQL=	client
-PLIST_SUB+=	MYSQL=""
-.else
-PLIST_SUB+=	MYSQL="@comment "
-.endif
-
-.if ${PORT_OPTIONS:MPGSQL}
-CONFIGURE_ARGS+=--enable-postgres
-USE_PGSQL=	yes
-PLIST_SUB+=	POSTGRES=""
-.else
-PLIST_SUB+=	POSTGRES="@comment "
+CMAKE_ARGS+=	-DENABLE_CLANG=0
 .endif
 
 post-patch:
 #	Use the correct wx-config
-	${REINPLACE_CMD} -e 's|%%ENABLE_CLANG%%|${ENABLE_CLANG}|g; \
-	   s|%%LOCALBASE%%|${LOCALBASE}|g; s|666|644|' ${WRKSRC}/configure
+	${REINPLACE_CMD} -e \
+	    's|wx-config|${WX_CONFIG}|; \
+	     s|%%LOCALBASE%%|${LOCALBASE}|g; \
+	     /IS_FREEBSD/s|0|1|' \
+	    ${WRKSRC}/CMakeLists.txt
 	${REINPLACE_CMD} -e 's|$${cur_rev}|${SVN_REVISION}|' \
 	    ${WRKSRC}/le_makerevision.sh
-# 	CTags already installed
-.if exists(${LOCALBASE}/include/readtags.h)
-	${RM} ${WRKSRC}/CodeLite/readtags.h
-.endif
 
 .include <bsd.port.mk>
