- Update to 3.3 - Add LICENSE (BSD) - Convert to optionsng - Trim Makefile's header
Changes:	http://icalendar.readthedocs.org/en/latest/changelog.html
PR:		ports/177679
Submitted by:	Tobias Rehbein <tobias.rehbein@web.de>
Approved by:	Junji NAKANISHI <jun-g@daemonfreaks.com> (maintainer)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315949 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/py-icalendar/Makefile
+++ b/devel/py-icalendar/Makefile
@@ -1,12 +1,8 @@
-# Ports collection makefile for:	py-icalendar
-# Date created:			May 17, 2005
-# Whom:				Kevin Lo <kevlo@FreeBSD.org>
-#
+# Created by: Kevin Lo <kevlo@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	icalendar
-PORTVERSION=	2.2
+PORTVERSION=	3.3
 CATEGORIES=	devel python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -14,13 +10,20 @@ PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 MAINTAINER=	jun-g@daemonfreaks.com
 COMMENT=	Parser and generator of iCalender files for Python
 
+LICENSE=	BSD
+
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}dateutil>0:${PORTSDIR}/devel/py-dateutil \
+		${PYTHON_PKGNAMEPREFIX}pytz>0:${PORTSDIR}/devel/py-pytz
+
 USE_PYTHON=	yes
 USE_PYDISTUTILS=easy_install
 
 DOCSDIR=	${PREFIX}/share/doc/py-${PORTNAME}
 
+.include <bsd.port.options.mk>
+
 post-install:
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	@${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/README.rst ${WRKSRC}/docs/changelog.rst ${DOCSDIR}/
 .endif
